style: Сделать блок Profile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         <img src="./images/Vector.svg" alt="Логотип" class="header__logo">
     </header>
     <main class="content">
-        <section></section>
+        <section class="profile">
+            <img class="profile__avatar" src="./images/Жак Ив Кусто.svg" alt="Жак Ив Кусто">
+            <div class="profile__info">
+                <h1 class="profile__name">Жак-Ив Кусто<img src="./images/Vector (3).svg" arai-hidden="true" alt="Карандаш - редактировать" class="profile__edit"></h1>
+                <p class="profile__profession">Исследователь океана</p>
+            </div>
+            <img src="./images/плюс.svg" alt="Плюс - добавить" class="profile__add">
+        </section>
         <section></section>
     </main>
 
