--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="pages/index.css">
     <title>Mesto</title>
 </head>
+
 <body class="page">
     <header class="header">
         <img src="./images/Vector.svg" alt="Логотип" class="header__logo">
@@ -16,15 +17,63 @@
         <section class="profile">
             <img class="profile__avatar" src="./images/Жак Ив Кусто.svg" alt="Жак Ив Кусто">
             <div class="profile__info">
-                <h1 class="profile__name">Жак-Ив Кусто<img src="./images/Vector (3).svg" arai-hidden="true" alt="Карандаш - редактировать" class="profile__edit"></h1>
-                <p class="profile__profession">Исследователь океана</p>
+                <h1 class="profile__title">Жак-Ив Кусто<img src="./images/Vector (3).svg" arai-hidden="true"
+                        alt="Карандаш - редактировать" class="profile__edit"></h1>
+                <p class="profile__subtitle">Исследователь океана</p>
             </div>
             <img src="./images/плюс.svg" alt="Плюс - добавить" class="profile__add">
         </section>
-        <section></section>
+        <section class="elements-grid">
+            <div class="elements-grid__item">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash (1).svg"
+                    alt="Карачаевск">
+                    <div class="elements-grid__text">
+                    <h2 class="elements-grid__title">Карачаевск</h2>
+                    <button class="elements-grid__button"></button>
+                    </div>
+            </div>
+            <div class="elements-grid__item">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash (1).svg"
+                    alt="Гора Эльбрус">
+                <div class="elements-grid__text">
+                <h2 class="elements-grid__title">Гора Эльбрус</h2>
+                <button class="elements-grid__button"></button>
+                </div>
+            </div>
+            <div class="elements-grid__item">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash (1).svg" alt="Домбай">
+                <div class="elements-grid__text">
+                <h2 class="elements-grid__title">Домбай</h2>
+                <button class="elements-grid__button"></button>
+                </div>
+            </div>
+            <div class="elements-grid__item">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash (1).svg"
+                    alt="Гора Эльбрус">
+                    <div class="elements-grid__text">
+                    <h2 class="elements-grid__title">Гора Эльбрус</h2>
+                    <button class="elements-grid__button"></button>
+                    </div>
+                </div>
+            <div class="elements-grid__item">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash.svg" alt="Домбай">
+                <div class="elements-grid__text">
+                <h2 class="elements-grid__title">Домбай</h2>
+                <button class="elements-grid__button"></button>
+            </div>
+            </div>
+            <div class="elements-grid__item">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash (1).svg"
+                    alt="Карачаево-Черкесия">
+                    <div class="elements-grid__text">
+                    <h2 class="elements-grid__title">Карачаево-Черкесия</h2>
+                    <button class="elements-grid__button"></button>
+                    </div>
+                </div>
+        </section>
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
 </body>
