СДелать адаптивную верстку и форму js

--- a/index.html
+++ b/index.html
@@ -27,53 +27,67 @@
             <div class="elements-grid__item">
                 <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash (1).svg"
                     alt="Карачаевск">
-                    <div class="elements-grid__text">
+                <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Карачаевск</h2>
                     <button class="elements-grid__button"></button>
-                    </div>
+                </div>
             </div>
             <div class="elements-grid__item">
                 <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash (1).svg"
                     alt="Гора Эльбрус">
                 <div class="elements-grid__text">
-                <h2 class="elements-grid__title">Гора Эльбрус</h2>
-                <button class="elements-grid__button"></button>
+                    <h2 class="elements-grid__title">Гора Эльбрус</h2>
+                    <button class="elements-grid__button"></button>
                 </div>
             </div>
             <div class="elements-grid__item">
                 <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash (1).svg" alt="Домбай">
                 <div class="elements-grid__text">
-                <h2 class="elements-grid__title">Домбай</h2>
-                <button class="elements-grid__button"></button>
+                    <h2 class="elements-grid__title">Домбай</h2>
+                    <button class="elements-grid__button"></button>
                 </div>
             </div>
             <div class="elements-grid__item">
                 <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash (1).svg"
                     alt="Гора Эльбрус">
-                    <div class="elements-grid__text">
+                <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Гора Эльбрус</h2>
                     <button class="elements-grid__button"></button>
-                    </div>
                 </div>
+            </div>
             <div class="elements-grid__item">
                 <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash.svg" alt="Домбай">
                 <div class="elements-grid__text">
-                <h2 class="elements-grid__title">Домбай</h2>
-                <button class="elements-grid__button"></button>
-            </div>
+                    <h2 class="elements-grid__title">Домбай</h2>
+                    <button class="elements-grid__button"></button>
+                </div>
             </div>
             <div class="elements-grid__item">
                 <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash (1).svg"
                     alt="Карачаево-Черкесия">
-                    <div class="elements-grid__text">
+                <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Карачаево-Черкесия</h2>
                     <button class="elements-grid__button"></button>
-                    </div>
                 </div>
+            </div>
         </section>
     </main>
 
     <footer class="footer">
         <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
+    <div class="popup">
+        <div class="popup__container">
+            <button type="button" class="popup__button"></button>
+            <form class="form">
+                <div class="form__container">
+                    <p class="form__title">Редактировать профиль</p>
+                    <input type="text" name="title" value="" class="form__input-title">
+                    <input type="text" name="subtitle" value="" class="form__input-subtitle">
+                    <button type="submit" class="form__button">Сохранить</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <script src="./index.js"></script>
 </body>
