--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash.svg" alt="Домбай">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash (1).svg" alt="Домбай">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Домбай</h2>
                     <button class="elements-grid__button"></button>
