--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
         <section class="elements-grid">
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash (1).svg"
+                <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash.png"
                     alt="Карачаевск">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Карачаевск</h2>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash (1).svg"
+                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash.png"
                     alt="Гора Эльбрус">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Гора Эльбрус</h2>
@@ -41,14 +41,14 @@
                 </div>
             </div>
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash (1).svg" alt="Домбай">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Домбай</h2>
                     <button class="elements-grid__button"></button>
                 </div>
             </div>
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash (1).svg"
+                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash.png"
                     alt="Гора Эльбрус">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Гора Эльбрус</h2>
@@ -56,14 +56,14 @@
                 </div>
             </div>
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash (1).svg" alt="Домбай">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Домбай</h2>
                     <button class="elements-grid__button"></button>
                 </div>
             </div>
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash (1).svg"
+                <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash.png"
                     alt="Карачаево-Черкесия">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Карачаево-Черкесия</h2>
