Проверить на валидаторе

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </header>
     <main class="content">
         <section class="profile">
-            <img class="profile__avatar" src="./images/Жак Ив Кусто.svg" alt="Жак Ив Кусто">
+            <img class="profile__avatar" src="./images/ЖакИвКусто.svg" alt="Жак Ив Кусто">
             <div class="profile__info">
-                <h1 class="profile__title">Жак-Ив Кусто<img src="./images/Vector (3).svg" arai-hidden="true"
+                <h1 class="profile__title">Жак-Ив Кусто<img src="./images/Vector(3).svg" 
                         alt="Карандаш - редактировать" class="profile__edit"></h1>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
