<C:/Program Files/Git/html>

--- a/index.html
+++ b/index.html
@@ -17,24 +17,22 @@
         <section class="profile">
             <img class="profile__avatar" src="./images/ЖакИвКусто.svg" alt="Жак Ив Кусто">
             <div class="profile__info">
-                <h1 class="profile__title">Жак-Ив Кусто<img src="./images/Vector(3).svg" 
-                        alt="Карандаш - редактировать" class="profile__edit"></h1>
+                <h1 class="profile__title">Жак-Ив Кусто<img src="./images/Vector(3).svg" alt="Карандаш - редактировать"
+                        class="profile__edit"></h1>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
             <img src="./images/плюс.svg" alt="Плюс - добавить" class="profile__add">
         </section>
         <section class="elements-grid">
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash.png"
-                    alt="Карачаевск">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Карачаевск</h2>
                     <button class="elements-grid__button"></button>
                 </div>
             </div>
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash.png"
-                    alt="Гора Эльбрус">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Гора Эльбрус</h2>
                     <button class="elements-grid__button"></button>
@@ -48,8 +46,7 @@
                 </div>
             </div>
             <div class="elements-grid__item">
-                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash.png"
-                    alt="Гора Эльбрус">
+                <img class="elements-grid__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
                 <div class="elements-grid__text">
                     <h2 class="elements-grid__title">Гора Эльбрус</h2>
                     <button class="elements-grid__button"></button>
@@ -91,3 +88,5 @@
     </div>
     <script src="./index.js"></script>
 </body>
+
+</html>
