--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <img class="profile__avatar" src="./images/Avatar.jpg" alt="Жак Ив Кусто">
             <div class="profile__info">
                 <div class="profile__flex">
-                <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button class="profile__edit" type="button"></button>
+                    <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <button class="profile__edit" type="button"></button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
@@ -73,22 +73,24 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__copyright">© 2020 Mesto Russia</p>
+        <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
     <div class="popup">
         <div class="popup__container">
             <button aria-label="Закрыть" type="button" class="popup__button"></button>
-            <form name="form" class="form">
-                <div class="form__container">
-                    <h2 class="form__title">Редактировать профиль</h2>
-                    <input type="text" name="title" value="" class="form__input form__input_text_title" required placeholder="Ваше имя">
-                    <input type="text" name="subtitle" value="" class="form__input form__input_text_subtitle" required placeholder="Ваша деятельность">
-                    <button type="submit" class="form__button">Сохранить</button>
+            <form name="form-edit" class="form-edit">
+                <div class="form-edit__container">
+                    <h2 class="form-edit__title">Редактировать профиль</h2>
+                    <input type="text" name="title" value="" class="form-edit__input form-edit__input_text_title"
+                        required placeholder="Ваше имя">
+                    <input type="text" name="subtitle" value="" class="form-edit__input form-edit__input_text_subtitle"
+                        required placeholder="Ваша деятельность">
+                    <button type="submit" class="form-edit__button">Сохранить</button>
                 </div>
             </form>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./script/index.js"></script>
 </body>
 
 </html>
