--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <template id="elements-grid">
                 <ul>
                     <li class="elements-grid__item">
-                        <img class="elements-grid__image" src="" alt="">
+                        <img class="elements-grid__image">
                         <button aria-label="Удалить" type="button" class="elements-grid__delete"></button>
                         <div class="elements-grid__text">
                             <h2 class="elements-grid__title"></h2>
@@ -77,7 +77,7 @@
     <div class="popup popup_type_image">
         <div class="popup__container popup__container_type_image">
             <button aria-label="Закрыть" type="button" class="popup__button"></button>
-            <img class="popup__link" src="" alt="">
+            <img class="popup__link">
             <h2 class="popup__name"></h2>
         </div>
     </div>
