--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
             <button type="button" class="profile__add"></button>
         </section>
-        <div class="elements-grid">
+        <div class="elements">
+            <ul class="elements-grid">
             <template id="elements-grid">
-                <ul>
                     <li class="elements-grid__item">
                         <img class="elements-grid__image">
                         <button aria-label="Удалить" type="button" class="elements-grid__delete"></button>
@@ -36,8 +36,8 @@
                             <button aria-label="Лайк" type="button" class="elements-grid__like"></button>
                         </div>
                     </li>
-                </ul>
-            </template>
+                </template>
+            </ul>
         </div>
     </main>
 
