--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
             <button type="button" class="profile__add"></button>
         </section>
-        <div class="elements">
+        <section class="elements">
             <ul class="elements-grid">
-            <template id="elements-grid">
+                <template id="elements-grid">
                     <li class="elements-grid__item">
                         <img class="elements-grid__image">
                         <button aria-label="Удалить" type="button" class="elements-grid__delete"></button>
@@ -38,7 +38,7 @@
                     </li>
                 </template>
             </ul>
-        </div>
+        </section>
     </main>
 
     <footer class="footer">
