--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
             <h2 class="popup__name"></h2>
         </div>
     </div>
-    <script src="./script/validation.js"></script>
-
-    <script src="./script/index.js"></script>
+    
+    <script type="module" src="./script/index.js"></script>
 
 
 </body>
