--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pages/index.css">
+    
     <title>Mesto</title>
 </head>
 
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
 
 
 </body>
