--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
 
 <body class="page">
     <header class="header">
-        <img src="./images/Vector.svg" alt="Логотип" class="header__logo">
+        <img src="<%=require('../images/Vector.svg')%>"  alt="Логотип" class="header__logo">
     </header>
     <main class="content">
         <section class="profile">
-            <img class="profile__avatar" src="./images/Avatar.jpg" alt="Жак Ив Кусто">
+            <img class="profile__avatar" src="<%=require('../images/Avatar.jpg')%>" alt="Жак Ив Кусто">
             <div class="profile__info">
                 <div class="profile__flex">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <script type="module" src="./src/index.js"></script>
+    
 
 
 </body>
