ПР №8 На проверку

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Mesto</title>
 </head>
 
@@ -18,8 +17,8 @@
             <img class="profile__avatar" src="<%=require('../images/Avatar.jpg')%>" alt="Жак Ив Кусто">
             <div class="profile__info">
                 <div class="profile__flex">
-                    <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <p class="profile__subtitle">Исследователь океана</p>
+                    <h1 class="profile__title"></h1>
+                    <p class="profile__subtitle"></p>
                 </div>
                 <button class="profile__edit" type="button"></button>
             </div>
@@ -39,6 +38,7 @@
                 </template>
             </ul>
         </section>
+        <section class="card-list"></section>
     </main>
 
     <footer class="footer">
