--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <main class="content">
         <section class="profile">
             <div class="profile__avatar-container">
-            <img class="profile__avatar" src="<%=require('./images/Avatar.jpg')%>" alt="Жак Ив Кусто">
+            <img class="profile__avatar" scr="" alt="Аватар">
             <div class="profile__edit-container"></div>
             </div>
             <div class="profile__info">
