ПР№9 Ревью: автотесты

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                     <h2 class="form__title">Обновить аватар</h2>
                     <input type="url" name="avatar" value="" class="form__input form__input_text_link" required
                         placeholder="Ссылка на картинку" id="link">
-                    <span id="link-error" class="error"></span>
+                    <span id="error" class="error"></span>
                     <button type="submit" class="form__button">Сохранить</button>
                 </div>
             </form>
