ПР№9 Ревью: автотесты 2

--- a/src/index.html
+++ b/src/index.html
@@ -93,8 +93,8 @@
                 <div class="form__container">
                     <h2 class="form__title">Обновить аватар</h2>
                     <input type="url" name="avatar" value="" class="form__input form__input_text_link" required
-                        placeholder="Ссылка на картинку" id="link">
-                    <span id="error" class="error"></span>
+                        placeholder="Ссылка на картинку" id="link-avatar">
+                    <span id="link-error-avatar" class="error"></span>
                     <button type="submit" class="form__button">Сохранить</button>
                 </div>
             </form>
